# RoboKit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
debug/: de_camera.py  de_client.py  de_joystickcontrol.py  example_5_joystickcontrol.py  robot_client.py  tmp.py
debug/data/: de_calvin.ipynb  de_eo_data.ipynb  de_eo_oxe.yaml  de_extract_npy.sh  de_handler.py  de_hf_download_unzip.sh  de_huggingface.py  de_huggingface_ckpt.py  de_npz_to_hdf5.py  de_process_from_hf.sh  de_quat.py  de_tcl_data.ipynb  de_tcl_hdf5.ipynb  de_tcl_hdf5.py  de_walker.py
debug/grasp/: collect_exp10.py  de_socket.py  grasp5.py  grasp_exp5_p2p.py  grasp_sender.py
debug/joint/: de_joint.py  inovo_motion.py  motion_lib.py
debug/p2p/: de_evaluator.py  de_gradio.py  de_replay_client.py
debug/pygame/: de_imu.py  de_imu_control.py  de_imu_raw.py  de_joystick.py  de_keyboard.py  de_opengl.py
debug/quest/: de_quest_3d.py  de_quest_control.py  de_quest_control_tcl.py  de_quest_data.py  de_quest_vis.py
debug/ros/: de_force.py  de_roslibpy.ipynb  de_subscriber.py  de_turtle.py  de_visualize_force.py
robokit/data/: data_handler.py  realsense_handler.py  tcl_datasets.py
robokit/debug/: de_camera.py  de_pygame.py  example_5_joystickcontrol.py  grasp_sender.py
robokit/debug/ros/: de_roslibpy.ipynb
robokit/debug_utils/: debug_classes.py
robokit/network/: README.md  robot_client.py  tele_control.py
robokit/service/: gpu_service.py  service_connector.py
scripts/: 00_collect_teleop_data.py  01_download_from_hf_and_process.sh  01_preprocess_data.py  03_run_real_evaluator.py
src/robokit/connects/: gpu_service.py  protocols.py  service_connector.py
src/robokit/controllers/: imu_control.py  tele_control.py
src/robokit/data/: data_handler.py  realsense_handler.py  tcl_datasets.py
src/robokit/data_manager/: data_handler.py  ft300_handler.py  realsense_handler.py  utils_multiview.py
src/robokit/datasets/: preprocess_data.py  tcl_datasets.py  tools.py
src/robokit/debug_utils/: __init__.py  curves.py  debug_classes.py  images.py  io.py  plot_cosmos_log.py  printer.py  time_profiler.py  times.py
src/robokit/network/: imu_control.py  robot_client.py  robot_client_piper.py  robot_evaluator.py  tele_control.py  vr_handler.py
src/robokit/robots/: robot_client_inovo.py  robot_client_piper.py  (+1 more)
tests/: test_data_format.py  test_evaluator_p2p.py  test_gpu_service.py
(+17 files in other folders)
