[build-system]
# 配置构建系统，指定构建工具及其版本
requires = ["setuptools>=42", "twine"]
build-backend = "setuptools.build_meta"

[project]
# 设置项目名称、版本和作者等信息
name = "robokit"
version = "0.1.0"
description = "A simple robot toolkit"
authors = [
    { name = "Ge Yuan", email = "gavinyuan97@gmail.com" }
]
dependencies = [
#    "pyrealsense2",  # for camera
    "pygame",
    "roslibpy",
    "requests",
    "tqdm",
    "uvicorn",
#    "gradio",
    "torch>2.1",
    "numpy",  # not sure if >=2 is ok, suggest 1.26.1
    "matplotlib<3.10",
    "scipy",
]

# 配置项目的分类（适用于 PyPI）
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# 自动查找所有包，包含 robokit 目录下的所有模块
where = ["src"]
exclude = ["debug", "tests", "thirdparty"]
